  EntityApplicationPanel.constructApplicationModel() made non-static and protected
  EntityDbLocalProvider.disconnect() does not revalidate an invalid connection before trying to disconnect it
  EntityApplicationPanel.constructApplicationModel() made abstract and renamed to initializeApplicationModel
  EntityApplicationPanel.startApplication() signature changed accordingly
  EntityApplicationPanel.getUser() made non-static and protected
  EntityComboBoxModel now selectes item whether or not it exists in the model
  EntityApplicationPanel.saveUser() added
  EntityDbConnection.insert() now disregards id generation if primary key values are already set
  SearchType.IN removed
  EntityCriteria.propertyCriteria() added
  AuthenticationException removed, replaced with SQLException
  PropertyCriteria refactored
  common.model.formats SimpleDateFormat classes deleted
  common.model.formats.DateFormats added
  UiUtil.getSize() renamed to getScreenSizeRatio()
  common.db.Criteria.asString(), added Dbms parameter
  DbConnection.endTransaction(boolean commit) replaced with rollbackTransaction() and commitTransaction()
  EntityDb.endTransaction(boolean commit) replaced with rollbackTransaction() and commitTransaction()
  EntityDb.writeBlob() readBlob() signatures changed
  EntityCriteria removed ambiguous method
  EntityCriteria.setOrderByClause() added
  EntityModel refactored, insert/update/delete mechanism moved to EntityEditModel
  EntityEditModelTest added
  bindEventsInternal() added where applicable, so that you don't have to remember to call super.bindEvents() when overriding bindEvents()
  EntityEditModel.getEntityCopy() overloaded with includePrimaryKeyValues parameter
  EntityEditModel.insert() now uses the above method
  EntityEditModel.stEntityNotNull changed to stEntityNull
  EntityEditModel.getEntityNotNullState() renamed to getEntityNullState()
  EntityEditModel.initializeEntityComboBoxModels() removed
  EntityEditModel.isPropertyNullable() added